--- a/Retrieval/index.html
+++ b/Retrieval/index.html
@@ -4,15 +4,34 @@
         <title>Project</title>
         <meta charset="utf-8">
 
-        <!-- 	<script src="jquery-1.11.2.min.js"></script> -->
-        <link rel="stylesheet"  href="style.css" >
+        <script src="//code.jquery.com/jquery-latest.js"></script>
         <!-- 	<script src="app.js"></script> -->
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-latest.js"></script>
+        <link rel="stylesheet"  href="style.css" >
+        <script src="includes/scripts.js"></script>
+
+
+
     </head>
 
     <body>
         <div id="wrapper">
             <header>
                 <h1>Information Retrieval System</h1>
+
             </header>
             <form name="form" action="search.php" method="get">
                 <label>Search:</label>
@@ -20,9 +39,13 @@
                 <input type="submit" value="Submit">
             </form>
             <h3>Reserved Words</h3>
-            <iframe id="iframeSearch" name="myPHPScript" src="reservedWords.php" height="100%" frameborder="0"></iframe>
+            <iframe id="iframeSearch" name="myPHPScript" src="reservedWords.php" height="100%" frameborder="0">
+            </iframe>
             <h3>Lyrics Tables</h3>
-            <iframe id="iframeTables" name="myPHPScript" src="getTables.php" height="100%" frameborder="1"></iframe>
+            <iframe id="iframeTables" name="myPHPScript" src="getTables.php" height="100%" frameborder="1">
+            </iframe>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     </body>
 </html>
