--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Project</title>
+        <title>Information Retrieval</title>
         <meta charset="utf-8">
 
         <script src="//code.jquery.com/jquery-latest.js"></script>
@@ -21,33 +21,55 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-latest.js"></script>
 
+<!--        Helvetica font-->
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
+
+<!--        Levenim font-->
+        <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>
+
 
         <link rel="stylesheet"  href="style.css" >
         <script src="includes/scripts.js"></script>
-
-
-
     </head>
 
     <body>
-        <div id="wrapper">
+        <div id="wrapperIntro">
             <header>
                 <h1>Information Retrieval System</h1>
-
+                <nav><ul>
+                    <li><a class="activeLine" href="#">Files</a></li>
+                     <li><a href="#">Index</a></li>
+                     <li><a href="#">temp1</a></li>
+                     <li><a href="#">temp2</a></li>
+                     <li><a href="#">About</a></li>
+                </ul></nav>
             </header>
-            <form name="form" action="search.php" method="get">
-                <label>Search:</label>
-                <input id="searchInput" type="text" name="searchInput" value="" placeholder="Enter a Word">
-                <input type="submit" value="Submit">
-            </form>
-            <h3>Reserved Words</h3>
-            <iframe id="iframeSearch" name="myPHPScript" src="reservedWords.php" height="100%" frameborder="0">
-            </iframe>
-            <h3>Lyrics Tables</h3>
-            <iframe id="iframeTables" name="myPHPScript" src="getTables.php" height="100%" frameborder="1">
-            </iframe>
+            <div class="files_container">
+                <nav>
+                    <div class="btn-group-vertical" role="group" aria-label="...">
+                        <button type="button" class="btn btn-default">Add</button>
+                        <button type="button" class="btn btn-default">Remove</button>
+                        <button type="button" class="btn btn-default">temp1</button>
+                    </div>
+
+                </nav>
+                <div id="files_bar" class="list-group">
+                    <a href="#" class="list-group-item active">
+                        <h4 class="list-group-item-heading">No. // Name of File // Author Name</h4>
+                        <p class="list-group-item-text">Date</p>
+                        <p class="list-group-item-text">Summary</p>
+                        <img src="images/v.png">
+                    </a>
+
+                </div>
+                <div class="clear"></div>
+            </div>
+
+
+
         </div>
+
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </body>
