--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -28,7 +28,7 @@
         <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>
 
 
-        <link rel="stylesheet"  href="style.css" >
+        <link rel="stylesheet"  href="includes/style.css" >
         <script src="includes/scripts.js"></script>
     </head>
 
@@ -66,13 +66,8 @@
                 </div>
                 <div class="clear"></div>
             </div>
-
-
-
         </div>
-
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </body>
 </html>
