--- a/Retrieval/index.html
+++ b/Retrieval/index.html
@@ -23,7 +23,7 @@
 
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
-        <link rel="stylesheet"  href="style.css" >
+        <link rel="stylesheet"  href="includes/style.css" >
         <script src="includes/scripts.js"></script>
 
 
@@ -36,16 +36,16 @@
                 <h1>Information Retrieval System</h1>
 
             </header>
-            <form name="form" action="search.php" method="get">
+            <form name="form" action="includes/search.php" method="get">
                 <label>Search:</label>
                 <input id="searchInput" type="text" name="searchInput" value="" placeholder="Enter a Word">
                 <input type="submit" value="Submit">
             </form>
             <h3>Reserved Words</h3>
-            <iframe id="iframeSearch" name="myPHPScript" src="reservedWords.php" height="100%" frameborder="0">
+            <iframe id="iframeSearch" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
             </iframe>
             <h3>Lyrics Tables</h3>
-            <iframe id="iframeTables" name="myPHPScript" src="getTables.php" height="100%" frameborder="1">
+            <iframe id="iframeTables" name="myPHPScript" src="includes/getTables.php" height="100%" frameborder="1">
             </iframe>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
