--- a/Retrieval/index.html
+++ b/Retrieval/index.html
@@ -24,29 +24,36 @@
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
         <link rel="stylesheet"  href="includes/style.css" >
+        <link rel="stylesheet" href="includes/style.php" media="screen">
         <script src="includes/scripts.js"></script>
-
 
 
     </head>
 
     <body>
-        <div id="wrapper">
+        <div id="wrapperIntro">
             <header>
                 <h1>Information Retrieval System</h1>
-
+                <nav><ul>
+                    <li><a class="activeLine" href="intro.html">Files</a></li>
+                     <li><a href="index.html">Index</a></li>
+                     <li><a href="temp1.html">temp1</a></li>
+                     <li><a href="#">temp2</a></li>
+                     <li><a href="#">About</a></li>
+                </ul></nav>
             </header>
-            <form name="form" action="includes/search.php" method="get">
-                <label>Search:</label>
-                <input id="searchInput" type="text" name="searchInput" value="" placeholder="Enter a Word">
-                <input type="submit" value="Submit">
-            </form>
-            <h3>Reserved Words</h3>
-            <iframe id="iframeSearch" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
-            </iframe>
-            <h3>Lyrics Tables</h3>
-            <iframe id="iframeTables" name="myPHPScript" src="includes/getTables.php" height="100%" frameborder="1">
-            </iframe>
+            <div class="files_container">
+
+                    <div class="clear"></div>
+
+                    <h1 class="titlePage">Lyrics Hits Table</h1>
+
+                    <iframe id="iframeTables" name="myPHPScript" src="includes/getTables.php" height="100%" frameborder="0">
+                    </iframe>
+
+                    <div class="clear"></div>
+
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
