--- a/Retrieval/index.html
+++ b/Retrieval/index.html
@@ -37,9 +37,10 @@
                 <nav><ul>
                     <li><a class="activeLine" href="intro.html">Files</a></li>
                      <li><a href="index.html">Index</a></li>
-                     <li><a href="temp1.html">temp1</a></li>
-                     <li><a href="#">temp2</a></li>
+                     <li><a href="search.html">Search</a></li>
+                     <li><a href="#">temp1</a></li>
                      <li><a href="#">About</a></li>
+                     <li><a id="refreshBtn" href="includes/createTables.php"></a></li>
                 </ul></nav>
             </header>
             <div class="files_container">
