--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -38,7 +38,7 @@
                     <li><a class="activeLine" href="intro.html">Files</a></li>
                      <li><a href="index.html">Index</a></li>
                      <li><a href="search.html">Search</a></li>
-                     <li><a href="#">temp2</a></li>
+                     <li><a href="#">temp1</a></li>
                      <li><a href="#">About</a></li>
                      <li><a id="refreshBtn" href="includes/createTables.php"></a></li>
                 </ul></nav>
@@ -48,7 +48,7 @@
 
                     <div class="clear"></div>
 
-                    <form name="form" action="includes/search.php" method="get">
+                    <form name="form" method="get" action="includes/search.php">
                         <label>Search:</label>
                         <input id="searchInput" type="text" name="searchInput" value="" placeholder="Enter a Word">
                         <input type="submit" value="Submit">
@@ -56,9 +56,11 @@
 
                     <div class="clear"></div>
 
+<!--
                     <h3>Reserved Words</h3>
                     <iframe id="iframeSearch" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
                     </iframe>
+-->
 
             </div>
         </div>
