--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -20,6 +20,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-latest.js"></script>
+        <script type="text/javascript" src="includes/angular/angular.min.js"></script>
 
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
@@ -30,8 +31,8 @@
 
     </head>
 
-    <body>
-        <div id="wrapperIntro">
+    <body ng-app="myApp">
+        <div id="wrapperIntro" ng-controller="myCtrl">
             <header>
                 <h1>Information Retrieval System</h1>
                 <nav><ul>
@@ -50,11 +51,25 @@
 
                     <form name="form" method="get" action="includes/search.php">
                         <label>Search:</label>
-                        <input id="searchInput" type="text" name="searchInput" value="" placeholder="Enter a Word">
+                        <input id="searchInput" type="text" ng-model="myValue" ng-change=search=1; name="searchInput" value="" placeholder="Enter a Word">
                         <input type="submit" value="Submit">
                     </form>
-
+                    <h1 ng-show="search">Search the Word - {{myValue}}</h1>
                     <div class="clear"></div>
+
+
+                <script>
+                    var app = angular.module('myApp', []);
+                    app.controller('myCtrl', function($scope) {
+                        $scope.search = 0;
+                          $scope.myValue;
+
+                    });
+                </script>
+
+
+
+
 
 <!--
                     <h3>Reserved Words</h3>
