load files names from local storage + reserved words

--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -68,14 +68,11 @@
                 </script>
 
 
+                    <div class="clear"></div>
 
-
-
-<!--
-                    <h3>Reserved Words</h3>
+                    <h1 class="titlePage">Reserved Words</h1>
                     <iframe id="iframeSearch" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
                     </iframe>
--->
 
             </div>
         </div>
