--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -49,7 +49,7 @@
 
                     <div class="clear"></div>
 
-                    <form name="form" method="get">
+                    <form name="form" method="get" action="includes/search.php">
                         <label>Search:</label>
                         <input id="searchInput" type="text" ng-model="myValue" ng-change=search=1; name="searchInput" value="" placeholder="Enter a Word">
                         <input type="submit" value="Submit">
