add new lyrics (problem with submit button)

--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -48,7 +48,7 @@
             <div class="files_container">
                 <nav>
                     <div class="btn-group-vertical" role="group" aria-label="...">
-                        <button type="button" class="btn btn-default">Add</button>
+                        <button type="button" class="btn btn-default" onclick="location.href='addNewFile.html'">Add</button>
                         <button type="button" class="btn btn-default">Remove</button>
                         <button type="button" class="btn btn-default">temp1</button>
                     </div>
