--- a/Retrieval/addNewFile.html
+++ b/Retrieval/addNewFile.html
@@ -48,27 +48,31 @@
                 </ul></nav>
             </header>
             <div class="files_container">
-                <form>
-                    <div class="clear"></div>
-                    <h2>File Name</h2>
-                    <input type="text" id="filename" class="infoInput" value="text5.txt">
-                    <div class="clear"></div><br>
-                    <h2>Artist</h2>
-                    <input type="text" id="artistname" class="infoInput" placeholder="Enter Artist Name">
-                    <div class="clear"></div><br>
-                    <h2>Song</h2>
-                    <input type="text" id="songname" class="infoInput" placeholder="Enter Song Name">
-                    <div class="clear"></div><br>
-                    <h2>Date</h2>
-                    <input type="text" id="songdate" class="infoInput" placeholder="Enter Song Date">
-                    <div class="clear"></div><br>
-                    <h2>Lyrics</h2>
-                    <textarea class="lyricsInput" id="lyricsData">Enter Lyrics Here</textarea>
-                    <div class="clear"></div><br>
-                    <input type="submit" id="formSubmit" value="Submit">
-                    <div class="clear"></div><br><br><br>
-                    <p id="downloadify"></p><br><br><br>
-                </form>
+                <div id="addNewForm">
+                    <form>
+                        <br><br>
+                        <label>Add New Lyrics</label>
+                        <div class="clear"></div>
+                        <h2>File Name</h2>
+                        <input type="text" id="filename" class="infoInput" value="text5.txt">
+                        <div class="clear"></div><br>
+                        <h2>Artist</h2>
+                        <input type="text" id="artistname" class="infoInput" placeholder="Enter Artist Name">
+                        <div class="clear"></div><br>
+                        <h2>Song</h2>
+                        <input type="text" id="songname" class="infoInput" placeholder="Enter Song Name">
+                        <div class="clear"></div><br>
+                        <h2>Date</h2>
+                        <input type="text" id="songdate" class="infoInput" placeholder="Enter Song Date">
+                        <div class="clear"></div><br>
+                        <h2>Lyrics</h2>
+                        <textarea class="lyricsInput" id="lyricsData">Enter Lyrics Here</textarea>
+                        <div class="clear"></div><br>
+                        <input type="submit" id="formSubmit" value="Submit">
+                        <div class="clear"></div><br><br><br>
+                        <p id="downloadify"></p><br><br><br>
+                    </form>
+                </div>
 
 
                 <script type="text/javascript">
