--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -49,15 +49,32 @@
 
                     <div class="clear"></div>
 
-                    <form name="form" method="get" action="includes/search.php">
-                        <label>Search:</label>
-                        <input id="searchInput" type="text" ng-model="myValue" ng-change=search=1; name="searchInput" value="" placeholder="Enter a Word">
-                        <input type="submit" value="Submit">
+                    <form name="form" method="get">
+                        <label>Search</label>
+                        <div class="clear"></div>
+                        <input class="searchInput" id="searchInput" type="text" ng-model="myValue" ng-change=search=1 name="searchInput" value="" placeholder="Enter a Word" onchange="doSomething(value);">
                     </form>
 
-                    <div ng-show="search">
-                        <h1>Search the Word - {{myValue}}</h1>
-                        <iframe id="iframeSearch" name="myPHPScript" src="includes/search.php" height="100%" frameborder="0">
+
+
+                    <script type="text/javascript">
+                        function doSomething(value) {
+                            document.getElementById('iframeSearch').remove();
+                            var iframe = document.createElement('iframe');
+                            iframe.id = "iframeSearch";
+                            iframe.frameBorder = "0";
+                            iframe.height = "100%";
+                            var html = "includes/search.php?searchInput="+value+"";
+                            iframe.src = encodeURI(html);
+                            console.log("iframe: "+iframe.src);
+                            //document.getElementById('iframeSearch').contentWindow.location.reload(true);
+                            document.getElementById("searchBox").appendChild(iframe);
+                        }
+                    </script>
+
+
+                    <div ng-show="search" id="searchBox">
+                        <iframe id="iframeSearch" name="myPHPScript" src="includes/search.php?searchInput=" height="100%" frameborder="0">
                         </iframe>
                     </div>
 
@@ -76,8 +93,8 @@
 
                     <div class="clear"></div>
                     <div ng-hide="search">
-                        <h1 class="titlePage">Reserved Words</h1>
-                        <iframe id="iframeSearch" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
+                        <h1 class="reservedTitle">Reserved Words</h1>
+                        <iframe id="iframeReserved" name="myPHPScript" src="includes/reservedWords.php" height="100%" frameborder="0">
                         </iframe>
                     </div>
 
