sorting inverted table + lyrics page + word search + css responsive

--- a/Retrieval/addNewFile.html
+++ b/Retrieval/addNewFile.html
@@ -54,7 +54,7 @@
                         <label>Add New Lyrics</label>
                         <div class="clear"></div>
                         <h2>File Name</h2>
-                        <input type="text" id="filename" class="infoInput" value="text5.txt">
+                        <input type="text" id="filename" class="infoInput" value="file5.txt">
                         <div class="clear"></div><br>
                         <h2>Artist</h2>
                         <input type="text" id="artistname" class="infoInput" placeholder="Enter Artist Name">
@@ -68,7 +68,7 @@
                         <h2>Lyrics</h2>
                         <textarea class="lyricsInput" id="lyricsData">Enter Lyrics Here</textarea>
                         <div class="clear"></div><br>
-                        <input type="submit" id="formSubmit" value="Submit">
+<!--                        <input type="submit" id="formSubmit" value="Submit">-->
                         <div class="clear"></div><br><br><br>
                         <p id="downloadify"></p><br><br><br>
                     </form>
