--- a/Retrieval/index.html
+++ b/Retrieval/index.html
@@ -20,6 +20,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-latest.js"></script>
+        <script type="text/javascript" src="includes/angular/angular.min.js"></script>
 
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
@@ -30,8 +31,8 @@
 
     </head>
 
-    <body>
-        <div id="wrapperIntro">
+    <body ng-app="myApp">
+        <div id="wrapperIntro"  ng-controller="myCtrl">
             <header>
                 <h1>Information Retrieval System</h1>
                 <nav><ul>
@@ -49,13 +50,51 @@
 
                     <h1 class="titlePage">Lyrics Hits Table</h1>
 
-                    <iframe id="iframeTables" name="myPHPScript" src="includes/getTables.php" height="100%" frameborder="0">
-                    </iframe>
+                    <section id="sortingBox">
+                        <h4>Sort By:</h4>
+                        <button name="id" value="id" class="btn-link" onclick="NewSort('id');">Id</button>
+                        <h4>|</h4>
+                        <button name="word" value="word" class="btn-link" onclick="NewSort('word');">Keyword</button>
+                        <h4>|</h4>
+                        <button name="hits" value="hits" class="btn-link" onclick="NewSort('hits');">Hits</button>
+                    </section>
+
+                    <div id="contentTable" ng-hide="word">
+                        <iframe  ng-onChange=word=1 id="iframeTables" name="myPHPScript" src="includes/getTables.php?sort=id" height="100%" frameborder="0">
+                        </iframe>
+                    </div>
+
+                    <script>
+                        var app = angular.module('myApp', []);
+                        app.controller('myCtrl', function($scope) {
+                            $scope.word = 0;
+                        });
+                    </script>
+
+                    <script type="text/javascript">
+                        function NewSort(sort){
+                            document.getElementById("iframeTables").remove();
+                            var iframe = document.createElement("iframe");
+                            iframe.id = "iframeTables";
+                            iframe.frameBorder = "0";
+                            iframe.height = "100%";
+                            var html = "http://localhost:8080/Retrieval/Retrieval/includes/getTables.php?sort="+sort+"";
+                            iframe.src = encodeURI(html);
+                            console.log("iframe: "+iframe.src);
+                            document.getElementById("contentTable").appendChild(iframe);
+                        }
+                    </script>
+
 
                     <div class="clear"></div>
 
             </div>
         </div>
+
+
+
+
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </body>
