--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -30,6 +30,7 @@
 
         <link rel="stylesheet"  href="includes/style.css" >
         <script src="includes/scripts.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
@@ -64,8 +65,11 @@
                     </a>
 -->
 
+
                 </div>
                 <div class="clear"></div>
+
+
             </div>
         </div>
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
