font-face new file, replacing new file to free slot

--- a/Retrieval/about.html
+++ b/Retrieval/about.html
@@ -25,7 +25,7 @@
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
 <!--        Levenim font-->
-        <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>
+<!--        <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>-->
 
 
         <link rel="stylesheet"  href="includes/style.css" >
@@ -58,7 +58,7 @@
 
 
             <div class="story">
-                <p>An Information Retrieval system is a web application software which designed to parse existing lyrics files into corresponding tables which shows specifications of each scanned word.<br> This system includes several of functionalities that manipulates sql tables dynamically and manually as well.<br>
+                <p>An Information Retrieval system is a web application software which designed to parse existing lyrics files into corresponding tables which shows specifications of each scanned word.<br> This system includes several of functionalities that manipulates sql tables dynamically and manually as well.<br><hr>
 In order to parse lyrics files and rearrange parsed words within corresponding tables, user must add specific files into the 'data' folder by clicking 'add' or by moving (cut and paste) an existing lyrics files which specially designed for this system.<br>
 <u>*do not try to manually add files from another source.</u><br>
 This inverted files system aim to maintain real-time information on current lyrics files, so that the shown tables changes whenever each word is clicked or another available buttons. They do so by connecting to a database of words and hits upon sql queries actions.<br>
