--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -25,7 +25,7 @@
         <script type="text/javascript" src="http://fast.fonts.net/jsapi/607782f1-d416-455d-b81a-01475efeabf4.js"></script>
 
 <!--        Levenim font-->
-        <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>
+<!--        <link href="http://db.onlinewebfonts.com/c/4aedb84cb7e5aa0e9c807efdb0cd947f?family=Levenim+MT" rel="stylesheet" type="text/css"/>-->
 
 
         <link rel="stylesheet"  href="includes/style.css" >
