example ==> http://localhost:8080//Retrieval/Retrieval/includes/getLyrics.php?file=../data/file2.txt&word=you

--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -65,7 +65,7 @@
 
 
                     <script type="text/javascript">
-                        function doSomething(value) {
+                        function doSomething(value, tosearch) {
                             document.getElementById('iframeSearch').remove();
                             var iframe = document.createElement('iframe');
                             iframe.id = "iframeSearch";
