--- a/Retrieval/search.html
+++ b/Retrieval/search.html
@@ -64,7 +64,7 @@
 
 
                     <script type="text/javascript">
-                        function doSomething(value, tosearch) {
+                        function doSomething(value) {
                             document.getElementById('iframeSearch').remove();
                             var iframe = document.createElement('iframe');
                             iframe.id = "iframeSearch";
