bugs fix - uploaded to godaddy

--- a/Retrieval/intro.html
+++ b/Retrieval/intro.html
@@ -56,7 +56,7 @@
             $(document).ready(function(){
                 var list = document.getElementsByClassName("deleteBtn");
                 for (i = 0; i < list.length; i++) {
-                    list[i].style.display = "block";
+                    list[i].style.display = "none";
                 }
 
             });
@@ -93,6 +93,46 @@
                         <p class="list-group-item-text">Summary</p>
                         <img src="images/v.png">
                     </a>
+-->
+<!--
+                <a href="javascript:showLyrics(1)" class="list-group-item active" style="width: 750px;">
+                    <h4 class="list-group-item-heading">
+                        1 // ../data/Coldplay - Trouble.txt
+                    </h4>
+                    <p class="list-group-item-text">
+                        Coldplay - Trouble
+                    </p>
+                    <p class="list-group-item-text">
+                        2000
+                    </p>
+                    <p class="list-group-item-text">
+                        Summary
+                    </p>
+                    <img src="images/coldplay.jpg"/>
+                </a>
+                <a href="deleteFile.php?fileid=1">
+                    <img src="./images/x.png" class="deleteBtn" href="deleteFile.php?fileid=1" data-pin-nopin="true"/>
+                </a>
+
+
+                <a href="javascript:showLyrics(1)" class="list-group-item active" style="width: 750px;">
+                    <h4 class="list-group-item-heading">
+                        1 // ../data/Coldplay - Trouble.txt
+                    </h4>
+                    <p class="list-group-item-text">
+                        Coldplay - Trouble
+                    </p>
+                    <p class="list-group-item-text">
+                        2000
+                    </p>
+                    <p class="list-group-item-text">
+                        Summary
+                    </p>
+                    <img src="images/coldplay.jpg"/>
+                </a>
+                <a href="deleteFile.php?fileid=1">
+                    <img src="./images/x.png" class="deleteBtn" href="deleteFile.php?fileid=1" data-pin-nopin="true"/>
+                </a>
 -->
 
 
