--- a/Retrieval/about.html
+++ b/Retrieval/about.html
@@ -46,7 +46,7 @@
             <header>
                 <h1>Information Retrieval System</h1>
                 <nav><ul>
-                    <li><a class="activeLine" href="intro.html">Files</a></li>
+                    <!--<li><a class="activeLine" href="intro.html">Files</a></li>-->
                      <li><a href="index.html">Index</a></li>
                      <li><a href="search.html">Search</a></li>
                      <li><a href="about.html">About</a></li>
